# surtgis

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  REVIEW_CHECKLIST.md  ROADMAP.md  SPEC_SURTGIS_COMPLEX_INSAR.md  SPEC_SURTGIS_ONNX_INFERENCE.md  SPEC_SURTGIS_RELIEF.md  SPEC_SURTGIS_RELIEF_3D.md  SPEC_SURTGIS_RELIEF_P3.md  SPEC_SURTGIS_RELIEF_P4.md  SPEC_SURTGIS_RELIEF_REVIEW.md  SPEC_SURTGIS_TEMPORAL_STREAMING.md  demo.sh  deny.toml  feature_request_07_04_2026.md  paper.bib  paper.md  planes.md
crates/algorithms/: Cargo.toml
crates/algorithms/benches/: hydrology.rs  imagery.rs  morphology.rs  terrain.rs
crates/algorithms/examples/: bench_comparison.rs  bench_svf.rs  bench_thread_scaling.rs  morphology_demo.rs
crates/algorithms/src/: lib.rs  maybe_rayon.rs
crates/algorithms/src/classification/: isodata.rs  kmeans.rs  mod.rs  pca.rs  supervised.rs
crates/algorithms/src/fluvial/: channel_steepness.rs  chi.rs  concavity.rs  divide_migration.rs  export.rs  knickpoint.rs  long_profile.rs  mod.rs  stream_traversal.rs  swath_profile.rs
crates/algorithms/src/hydrology/: advanced.rs  basin_morphometry.rs  breach.rs  d8.rs  drainage_density.rs  energy_cone.rs  fill_sinks.rs  flats.rs  flow_accumulation.rs  flow_direction.rs  flow_direction_dinf.rs  flow_direction_mfd.rs  flow_direction_mfd_adaptive.rs  flow_direction_tfga.rs  hand.rs  hypsometric.rs  laharz.rs  melton.rs  mod.rs  nested_depressions.rs  priority_flood.rs  sediment_connectivity.rs  stream_network.rs  watershed.rs  watershed_parallel.rs
crates/algorithms/src/imagery/: band_math.rs  burn_severity.rs  calibration.rs  change_detection.rs  cloud_mask.rs  color_balance.rs  composite.rs  index_builder.rs  indices.rs  mad.rs  mod.rs  reclassify.rs  sar.rs
crates/algorithms/src/inference/: mod.rs  onnx.rs
crates/algorithms/src/interpolation/: idw.rs  kdtree.rs  kriging.rs  mod.rs  natural_neighbor.rs  nearest.rs  regression_kriging.rs  tin.rs  tps.rs  universal_kriging.rs  variogram.rs
crates/algorithms/src/landscape/: class_metrics.rs  connected_components.rs  diversity.rs  mod.rs  patch_metrics.rs
crates/algorithms/src/morphology/: closing.rs  dilate.rs  element.rs  erode.rs  gradient.rs  mod.rs  opening.rs  tophat.rs
crates/algorithms/src/pansharpening/: brovey.rs  gram_schmidt.rs  mod.rs  pca_pansharpen.rs
crates/algorithms/src/sampling/: mod.rs
crates/algorithms/src/segmentation/: felzenszwalb.rs  mod.rs  slic.rs
crates/algorithms/src/statistics/: autocorrelation.rs  focal.rs  focal_fast.rs  mod.rs  zonal.rs
crates/algorithms/src/temporal/: anomaly.rs  mod.rs  phenology.rs  statistics.rs  streaming.rs  trend.rs
crates/algorithms/src/terrain/: accumulation_zones.rs  aspect.rs  chebyshev_spectral.rs  circular_variance_aspect.rs  contour.rs  (+56 more)
crates/algorithms/tests/: composite_pipeline.rs  cross_validation_gdal_grass.rs  hydrology_pipeline.rs  integration_production_bugs.rs  integration_real_dem.rs  integration_stac_multicolumn.rs  streaming_batch_parity.rs  streaming_geographic_reg1.rs
crates/cli/: Cargo.toml
crates/cli/examples/: test_mi_collect.rs
crates/cli/src/: commands.rs  composite_sink.rs  helpers.rs  main.rs  memory.rs  stac_introspect.rs  streaming.rs
crates/cli/tests/: flow_run.rs  smoke.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: cache.rs  cloud_reader.rs  cog_reader.rs  decompress.rs  error.rs  geotiff_keys.rs  grib_reader.rs  http.rs  ifd.rs  latlon_grid.rs  lib.rs  netcdf_reader.rs  reproject.rs  stac_client.rs  stac_cube_source.rs  stac_models.rs  stac_reader.rs  sync_api.rs  tile_index.rs  wasm_api.rs  zarr_auth.rs  zarr_cf.rs  zarr_reader.rs  zarr_writer.rs
crates/cloud/tests/: composite_integration.rs  grib_integration.rs  integration.rs  netcdf_integration.rs  stac_integration.rs  zarr_integration.rs
crates/colormap/: Cargo.toml
crates/colormap/src/: encode.rs  lib.rs  render.rs  scheme.rs
crates/core/: Cargo.toml
crates/core/examples/: insar_conjugate_product.rs
crates/core/src/: cube.rs  error.rs  lib.rs  mosaic.rs  resample.rs  streaming.rs  tiling.rs
crates/core/tests/: cube_geotiff.rs  tiff_oom_regression.rs  tiff_planar_regression.rs
crates/ffi/: Cargo.toml
crates/ffi/examples/: smoke.c
crates/ffi/include/: surtgis_flow.h
crates/ffi/src/: lib.rs
crates/ffi/tests/: ffi_roundtrip.rs
crates/flow/: Cargo.toml
crates/flow/benches/: step_throughput.rs
crates/flow/src/: diagnostics.rs  entrainment.rs  flux.rs  friction.rs  grid.rs  lib.rs  params.rs  state.rs  stepper.rs
crates/flow/tests/: m2_symmetry_2d.rs  t10_entrainment_caps.rs  t11_determinism_entrainment.rs  t13_thin_layer_step.rs  t1_lake_at_rest.rs  t2_ritter.rs  t3_stoker.rs  t4_mass_conservation.rs  t5_runout.rs  t6_nonneg_nan.rs  t7_determinism.rs  t8_entrainment_conservation.rs  t9_bitcompat_v10.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  dock.rs  executor.rs  io.rs  main.rs  menu.rs  registry.rs
crates/parallel/: Cargo.toml
crates/parallel/src/: lib.rs  strategy.rs  tiled.rs
crates/python/: Cargo.toml  README.md  gen_stubs.py  pyproject.toml  surtgis.pyi
crates/python/src/: cloud.rs  lib.rs
crates/python/tests/: test_surtgis.py
crates/relief/: Cargo.toml
crates/relief-3d/: Cargo.toml
crates/relief-3d/examples/: render_dem.rs  spike_1m_vertices.rs  spike_lod_4k.rs
crates/relief-3d/shaders/: relief.wgsl
crates/relief-3d/src/: camera.rs  headless.rs  lib.rs  lod.rs  martini.rs  mesh.rs  native.rs  pipeline.rs  web.rs
crates/relief/examples/: bench_vs_rayshader.rs  probe_horizon_variants.rs  render_relief.rs
crates/relief/src/: ambient.rs  compose.rs  lib.rs  ray_shade_impl.rs  shadow_ray.rs  sphere_shade_impl.rs  water.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: algorithms.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_read_geotiff/: oom-regression-46530acd
fuzz/fuzz_targets/: fuzz_decompress.rs  fuzz_ifd_parse.rs  fuzz_read_geotiff.rs
(+307 files in other folders)
