[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/algorithms",
    "crates/parallel",
    "crates/cli",
    "crates/wasm",
    "crates/python",
    "crates/cloud",
    "crates/colormap",
    "crates/gui",
]

[workspace.package]
version = "0.6.20"
edition = "2024"
authors = ["Francisco Parra"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/franciscoparrao/surtgis"
description = "High-performance geospatial analysis library in Rust"
keywords = ["gis", "geospatial", "raster", "terrain", "hydrology"]
categories = ["science::geo", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Geospatial
geo = "0.29"
geo-types = "0.7"
gdal = { version = "0.17", features = ["bindgen"] }
geozero = "0.14"
rstar = "0.12"
tiff = { version = "0.10", features = ["deflate"] }

# Numerics
ndarray = "0.16"
num-traits = "0.2"
ordered-float = "4"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cloud / HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
weezl = "0.1"
lru = "0.12"
byteorder = "1"
futures = "0.3"

# Zarr / Climate data
zarrs = { version = "0.23", default-features = false, features = ["gzip", "blosc", "zstd", "async"] }
netcdf = { version = "0.12", default-features = false }
grib = { version = "0.15", default-features = false }
proj4rs = { version = "0.1", features = ["crs-definitions", "geo-types"] }
zarrs_object_store = { version = "0.6", features = ["azure", "http"] }
zarrs_storage = { version = "0.4", features = ["async"] }
object_store = { version = "0.13", default-features = false, features = ["azure", "http"] }
chrono = "0.4"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Python
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = { version = "0.23", features = ["half"] }

# GUI
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_dock = "0.18"
walkers = "0.52"
rfd = "0.15"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }

# Vector formats
shapefile = { version = "0.7", features = ["geo-types"] }
rusqlite = { version = "0.39", features = ["bundled"] }

# ML
smelt-ml = "1.3"
csv = "1"

# Testing & Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
