[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/algorithms",
    "crates/parallel",
    "crates/cli",
    "crates/wasm",
    "crates/python",
    "crates/cloud",
    "crates/colormap",
    "crates/gui",
    "crates/relief",
    "crates/relief-3d",
]
# The `fuzz/` crate is a cargo-fuzz harness; it must NOT be a workspace member
# (it depends on the unstable `-Z sanitizer` build and its own nightly profile).
exclude = ["fuzz"]
# `cargo build`/`cargo test` without `-p` or `--workspace` only builds these
# by default — everything except `gui` and `relief-3d`. Those two pull in a
# full graphics stack (egui/eframe/wgpu) that normal engine development
# doesn't need, and doubles compile time. CI explicitly passes `--workspace
# --all-features` (see .github/workflows/*), which still builds everything,
# `default-members` included or not.
default-members = [
    "crates/core",
    "crates/algorithms",
    "crates/parallel",
    "crates/cli",
    "crates/wasm",
    "crates/python",
    "crates/cloud",
    "crates/colormap",
    "crates/relief",
]

[workspace.package]
version = "0.18.0"
edition = "2024"
# MSRV: edition 2024 + let-chains require 1.88, but the CLI's default
# `zarr` feature transitively requires zarrs >=0.23, which requires 1.91
# (true across the entire 0.23 line, not just the latest patch) — the
# declared MSRV only became enforceable once the `msrv` CI job started
# covering the CLI's default feature set (Sprint 5, engine audit R2).
# Verified by the `msrv` CI job.
rust-version = "1.91"
authors = ["Francisco Parra"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/franciscoparrao/surtgis"
description = "High-performance geospatial analysis library in Rust"
keywords = ["gis", "geospatial", "raster", "terrain", "hydrology"]
categories = ["science::geo", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Geospatial
geo = "0.29"
geo-types = "0.7"
gdal = { version = "0.17", features = ["bindgen"] }
geozero = "0.14"
parquet = { version = "59", default-features = false, features = ["snap"] }
rstar = "0.12"
tiff = { version = "0.10", features = ["deflate"] }

# Numerics
ndarray = "0.16"
num-traits = "0.2"
num-complex = "0.4"
ordered-float = "4"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cloud / HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
weezl = "0.1"
lru = "0.16"
byteorder = "1"
futures = "0.3"

# Zarr / Climate data
zarrs = { version = "0.23", default-features = false, features = ["gzip", "blosc", "zstd", "async", "filesystem"] }
netcdf = { version = "0.12", default-features = false }
grib = { version = "0.15", default-features = false }
proj4rs = { version = "0.1", features = ["crs-definitions", "geo-types"] }
zarrs_object_store = { version = "0.6", features = ["azure", "http"] }
zarrs_storage = { version = "0.4", features = ["async"] }
object_store = { version = "0.13", default-features = false, features = ["azure", "http"] }
chrono = "0.4"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen-test = "0.3"

# Python
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib"] }
numpy = { version = "0.23", features = ["half"] }

# GUI
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_dock = "0.18"
walkers = "0.52"
rfd = "0.15"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }

# Vector formats
shapefile = { version = "0.7", features = ["geo-types"] }
rusqlite = { version = "0.39", features = ["bundled"] }

# ML
smelt-ml = "1.3"
csv = "1"

# Testing & Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
# Fat LTO: cross-crate inlining between core and algorithms is worth the
# extra link time for the shipped binary (kernels call across the boundary).
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
