[package]
name = "surtgis-algorithms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geospatial algorithms for SurtGis: terrain, hydrology, imagery, interpolation"
keywords = ["gis", "terrain", "hydrology", "ndvi", "raster"]
categories = ["science::geo", "algorithms"]

[features]
default = ["parallel"]
parallel = ["dep:rayon", "surtgis-core/parallel", "surtgis-parallel/parallel"]
shapefile = ["surtgis-core/shapefile"]

[dependencies]
surtgis-core = { version = "0.7", path = "../core", default-features = false }
surtgis-parallel = { version = "0.7", path = "../parallel", default-features = false }
thiserror.workspace = true
anyhow.workspace = true
ndarray.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
geo.workspace = true
geo-types.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "terrain"
harness = false

[[bench]]
name = "hydrology"
harness = false

[[bench]]
name = "morphology"
harness = false

[[bench]]
name = "imagery"
harness = false
