[package]
name = "surtgis-algorithms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geospatial algorithms for SurtGis: terrain, hydrology, imagery, interpolation"
keywords = ["gis", "terrain", "hydrology", "ndvi", "raster"]
categories = ["science::geo", "algorithms"]

[features]
default = ["parallel"]
parallel = ["dep:rayon", "surtgis-core/parallel", "surtgis-parallel/parallel"]
shapefile = ["surtgis-core/shapefile"]
# Newer/experimental modules whose API may still change: hazard (v0.16)
# and exotic terrain algorithms. Off by default for external consumers of
# this crate; internal workspace members that use them enable it explicitly.
unstable = []
# `tract-onnx` (pure-Rust ONNX runtime — no C++/CUDA/onnxruntime, keeping
# the single-binary property) backing `inference::onnx::OnnxModel`. Off by
# default: it is a heavy dependency and, per SPEC_SURTGIS_ONNX_INFERENCE.md,
# still a scaffold (`OnnxModel::load`/`infer` are stubs). The tiling/halo/
# stitching orchestration in `inference::run_tiled` needs no ONNX runtime
# but lives under the `unstable` module, which `onnx` therefore enables.
onnx = ["dep:tract-onnx", "unstable"]

[dependencies]
surtgis-core = { version = "1.0", path = "../core", default-features = false }
surtgis-parallel = { version = "1.0", path = "../parallel", default-features = false }
thiserror.workspace = true
anyhow.workspace = true
ndarray.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
geo.workspace = true
geo-types.workspace = true
tract-onnx = { version = "0.23", optional = true }

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "terrain"
harness = false

[[bench]]
name = "hydrology"
harness = false

[[bench]]
name = "morphology"
harness = false

[[bench]]
name = "imagery"
harness = false
