[package]
name = "surtgis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance geospatial analysis CLI"
keywords = ["gis", "cli", "geospatial", "raster", "terrain"]
categories = ["science::geo", "command-line-utilities"]

[[bin]]
name = "surtgis"
path = "src/main.rs"

[features]
default = ["cloud", "zarr", "netcdf", "grib", "projections"]
gdal = ["surtgis-core/gdal"]
cloud = ["dep:surtgis-cloud"]
zarr = ["surtgis-cloud/zarr", "dep:chrono"]
netcdf = ["surtgis-cloud/netcdf"]
grib = ["surtgis-cloud/grib"]
projections = ["surtgis-cloud/projections", "dep:proj4rs"]
ml = ["dep:smelt-ml"]

[dependencies]
surtgis-core = { version = "0.11", path = "../core", features = ["shapefile", "geopackage"] }
surtgis-algorithms = { version = "0.11", path = "../algorithms" }
surtgis-parallel = { version = "0.11", path = "../parallel" }
surtgis-relief = { version = "0.11", path = "../relief" }
surtgis-cloud = { version = "0.11", path = "../cloud", features = ["native"], optional = true }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt", "macros"] }
ndarray.workspace = true
smelt-ml = { workspace = true, optional = true }
csv.workspace = true
chrono = { workspace = true, optional = true }
proj4rs = { workspace = true, optional = true }
geo.workspace = true
# mimalloc as global allocator: eliminates glibc malloc heap fragmentation,
# which the v0.6.24 bug report suggested might explain ~1.3 GB/min linear
# growth during long stac composite runs (many mixed-size alloc/free cycles).
mimalloc = { version = "0.1", default-features = false }
rayon.workspace = true
# Direct sys binding for the mi_collect(true) entry-point, which we call at
# end of each STAC composite strip to force return of idle segments to the OS
# and break the strip-pair-even/odd peak pattern (BUG_RAM_V070 item #6).
libmimalloc-sys = { version = "0.1", features = ["extended"] }
