[package]
name = "surtgis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance geospatial analysis CLI"
keywords = ["gis", "cli", "geospatial", "raster", "terrain"]
categories = ["science::geo", "command-line-utilities"]

[[bin]]
name = "surtgis"
path = "src/main.rs"

[features]
default = ["cloud", "zarr", "netcdf", "grib", "projections", "mimalloc"]
# mimalloc global allocator (compiles C). On by default for the RAM benefit;
# disable with --no-default-features for pure-Rust / musl-static / no-cc builds.
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
gdal = ["surtgis-core/gdal"]
cloud = ["dep:surtgis-cloud"]
zarr = ["surtgis-cloud/zarr", "dep:chrono"]
netcdf = ["surtgis-cloud/netcdf"]
grib = ["surtgis-cloud/grib"]
projections = ["surtgis-cloud/projections", "dep:proj4rs"]
ml = ["dep:smelt-ml"]
# Off by default — pulls wgpu + winit-style deps that aren't useful for
# the 2D CLI workflows. Enable explicitly to get the `relief-3d`
# subcommand.
relief-3d = ["dep:surtgis-relief-3d"]
# `surtgis infer` — tiled ONNX model inference (tract-onnx backend, pure
# Rust). Off by default: heavy dependency, and per
# SPEC_SURTGIS_ONNX_INFERENCE.md still a scaffold upstream
# (`OnnxModel::load`/`infer` are stubs in surtgis-algorithms).
onnx = ["surtgis-algorithms/onnx"]

[dependencies]
surtgis-core = { version = "0.18", path = "../core", features = ["shapefile", "geopackage"] }
surtgis-algorithms = { version = "0.18", path = "../algorithms", features = ["unstable"] }
surtgis-parallel = { version = "0.18", path = "../parallel" }
surtgis-relief = { version = "0.18", path = "../relief" }
surtgis-relief-3d = { version = "0.18", path = "../relief-3d", optional = true }
surtgis-cloud = { version = "0.18", path = "../cloud", features = ["native", "unstable"], optional = true }
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt", "macros"] }
ndarray.workspace = true
smelt-ml = { workspace = true, optional = true }
csv.workspace = true
chrono = { workspace = true, optional = true }
proj4rs = { workspace = true, optional = true }
geo.workspace = true
# mimalloc as global allocator: eliminates glibc malloc heap fragmentation,
# which the v0.6.24 bug report suggested might explain ~1.3 GB/min linear
# growth during long stac composite runs (many mixed-size alloc/free cycles).
mimalloc = { version = "0.1", default-features = false, optional = true }
rayon.workspace = true
# Direct sys binding for the mi_collect(true) entry-point, which we call at
# end of each STAC composite strip to force return of idle segments to the OS
# and break the strip-pair-even/odd peak pattern (BUG_RAM_V070 item #6).
libmimalloc-sys = { version = "0.1", features = ["extended"], optional = true }

# Diagnostic example exercising mimalloc's mi_collect; only builds with the feature.
[[example]]
name = "test_mi_collect"
required-features = ["mimalloc"]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
