[package]
name = "surtgis-cloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloud Optimized GeoTIFF (COG) reader and STAC client for SurtGis"
keywords = ["cog", "stac", "geotiff", "cloud", "satellite"]
categories = ["science::geo", "web-programming"]

[features]
default = ["deflate", "lzw"]
deflate = ["dep:flate2"]
lzw = ["dep:weezl"]
native = ["dep:tokio", "reqwest/rustls-tls"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]
zarr = ["dep:zarrs", "dep:zarrs_object_store", "dep:zarrs_storage", "dep:object_store", "dep:chrono"]
netcdf = ["dep:netcdf", "dep:chrono"]
grib = ["dep:grib"]

[dependencies]
surtgis-core = { version = "0.6.0", path = "../core", default-features = false }
thiserror.workspace = true
serde.workspace = true
ndarray.workspace = true
num-traits.workspace = true
reqwest = { workspace = true, default-features = false }
lru.workspace = true
byteorder.workspace = true
futures.workspace = true

# Compression (optional)
flate2 = { workspace = true, optional = true }
weezl = { workspace = true, optional = true }

# Native sync API (optional)
tokio = { workspace = true, optional = true }

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde_json.workspace = true

# Zarr / Climate data (optional)
zarrs = { workspace = true, optional = true }
zarrs_object_store = { workspace = true, optional = true }
zarrs_storage = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
netcdf = { workspace = true, optional = true }
grib = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
