[package]
name = "surtgis-colormap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Color mapping and raster visualization for SurtGis"
keywords = ["gis", "colormap", "visualization", "raster"]
categories = ["science::geo", "graphics"]

[dependencies]
surtgis-core = { version = "0.2.0", path = "../core", default-features = false, features = [] }
num-traits.workspace = true
