[package]
name = "surtgis-colormap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Color mapping and raster visualization for SurtGis"
keywords = ["gis", "colormap", "visualization", "raster"]
categories = ["science::geo", "graphics"]

[dependencies]
surtgis-core = { version = "0.13.1", path = "../core", default-features = false, features = [] }
num-traits.workspace = true
thiserror.workspace = true

# Native PNG encoder. WASM builds skip the `image` dep to keep the binary
# small; on WASM the JS side is expected to encode the raw RGBA buffer.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image.workspace = true
