[package]
name = "surtgis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for SurtGis geospatial library"

[features]
default = []
gdal = ["dep:gdal"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
geo-types.workspace = true
ndarray.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
gdal = { workspace = true, optional = true }
tiff.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
