[package]
name = "surtgis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for SurtGis geospatial library"
keywords = ["gis", "geospatial", "raster", "geotiff", "dem"]
categories = ["science::geo"]

[features]
default = ["parallel"]
gdal = ["dep:gdal"]
parallel = ["ndarray/rayon"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
geo-types.workspace = true
geo.workspace = true
serde_json.workspace = true
ndarray.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
gdal = { workspace = true, optional = true }
tiff.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
