[package]
name = "surtgis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for SurtGis geospatial library"
keywords = ["gis", "geospatial", "raster", "geotiff", "dem"]
categories = ["science::geo"]

[features]
default = ["parallel"]
gdal = ["dep:gdal"]
parallel = ["ndarray/rayon"]
shapefile = ["dep:shapefile"]
geopackage = ["dep:rusqlite"]
parquet = ["dep:parquet"]
complex = ["dep:num-complex"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
geo-types.workspace = true
geo.workspace = true
serde_json.workspace = true
ndarray.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
gdal = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
num-complex = { workspace = true, optional = true }
shapefile = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tiff.workspace = true
# Own DEFLATE ("Adobe Deflate") compression for the native N-band stack
# writer (`write_geotiff_stack`): `tiff`'s built-in compressors are only
# reachable through its `ImageEncoder`, whose `ColorType` is fixed at
# compile time — unusable for a runtime-determined band count. We drive
# `tiff`'s lower-level `DirectoryEncoder` directly instead and compress
# strips ourselves with the same zlib wrapper `tiff` uses internally.
flate2.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
