[package]
name = "surtgis-parallel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel processing strategies for SurtGis"
keywords = ["gis", "parallel", "rayon", "raster", "tiling"]
categories = ["science::geo", "concurrency"]

[features]
default = ["parallel"]
parallel = ["dep:rayon", "dep:crossbeam", "surtgis-core/parallel"]

[dependencies]
surtgis-core = { version = "0.6.1", path = "../core", default-features = false }
rayon = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }
ndarray.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
