[package]
name = "surtgis-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for SurtGis geospatial algorithms via PyO3"
publish = false  # Distributed via PyPI, not crates.io

[lib]
name = "surtgis"
crate-type = ["cdylib"]

[features]
default = ["parallel"]
parallel = ["surtgis-algorithms/parallel"]

[dependencies]
surtgis-core = { version = "0.6.1", path = "../core", default-features = false }
surtgis-algorithms = { version = "0.6.1", path = "../algorithms", default-features = false }
pyo3.workspace = true
numpy.workspace = true
