[package]
name = "surtgis-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for SurtGis geospatial algorithms via PyO3"
publish = false  # Distributed via PyPI, not crates.io

[lib]
name = "surtgis"
crate-type = ["cdylib"]

[features]
default = ["parallel", "cloud"]
parallel = ["surtgis-algorithms/parallel"]
# Remote I/O (COG reader + STAC client) in the Python wheel. Pulls tokio +
# reqwest/rustls. On by default; disable with --no-default-features for
# pure-compute / minimal-toolchain builds.
cloud = ["dep:surtgis-cloud"]

[dependencies]
surtgis-core = { version = "0.16", path = "../core", default-features = false }
surtgis-algorithms = { version = "0.16", path = "../algorithms", default-features = false }
surtgis-relief = { version = "0.16", path = "../relief" }
surtgis-colormap = { version = "0.16", path = "../colormap" }
surtgis-cloud = { version = "0.16", path = "../cloud", features = ["native"], optional = true }
pyo3.workspace = true
numpy.workspace = true
