[package]
name = "surtgis-relief-3d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native wgpu 3D viewer for SurtGis shaded relief"
keywords = ["gis", "3d", "wgpu", "webgpu", "visualization"]
categories = ["science::geo", "graphics", "rendering"]

[dependencies]
surtgis-core   = { version = "0.11", path = "../core", default-features = false }
surtgis-relief = { version = "0.11", path = "../relief", default-features = false }
wgpu           = "23"
bytemuck       = { version = "1", features = ["derive"] }
glam           = "0.29"
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit          = "0.30"
pollster       = "0.4"
env_logger     = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen   = "0.2"
web-sys        = { version = "0.3", features = [
  "HtmlCanvasElement", "Window", "Document",
] }

[dev-dependencies]
